@@ -43,6 +43,9 @@ enable debug output.
 .B     --lobby-server=VALUE
 Use the specified irc server as lobby server. You can use 'none' to
 disable lobby announcement.
+.B -c, --game_config=VALUE
+Use the specified file as config file. The file will be read from the netpanzer
+config directory (ie. ~/.netpanzer/config)
 .PD
 
 .SH "AUTHORS"
